--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node ./server/index.js",
-    "build":"webpack",
-    "buildWatcher":"webpack --watch"
+    "build": "webpack",
+    "buildWatcher": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -17,14 +17,21 @@
     "node js",
     "angular2"
   ],
-  "author": "Boykov D.A.",
+  "author": {
+    "name": "Boykov D.A.",
+    "email": "boikovdmitriy@mail.ru"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/boykovdmitriy/personalBlog/issues"
   },
   "homepage": "https://github.com/boykovdmitriy/personalBlog#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.9",
+    "mongoose": "^4.6.0",
+    "morgan": "^1.7.0"
   },
   "devDependencies": {
     "@angular/common": "2.0.0",
@@ -36,26 +43,26 @@
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
     "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.8",
+    "rxjs": "5.0.0-beta.12",
     "zone.js": "~0.6.12",
     "autoprefixer-loader": "^3.2.0",
     "clean-webpack-plugin": "^0.1.9",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.25.0",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "img-loader": "^1.2.2",
     "imports-loader": "^0.6.5",
     "node-sass": "^3.7.0",
     "path": "^0.12.7",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^4.0.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "tslint-loader": "^2.1.4",
     "typescript": "^1.8.10",
-    "typings": "^0.8.1",
+    "typings": "^1.3.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.16.1"
   }
 }
