--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./server/index.js",
     "build": "webpack",
-    "buildWatcher": "webpack --watch"
+    "buildWatcher": "webpack --watch",
+    "webpack-dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -37,23 +38,24 @@
     "@angular/common": "2.0.0",
     "@angular/compiler": "2.0.0",
     "@angular/core": "2.0.0",
+    "@angular/forms": "^2.0.0",
     "@angular/http": "2.0.0",
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
-    "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "~0.6.12",
     "autoprefixer-loader": "^3.2.0",
     "clean-webpack-plugin": "^0.1.9",
+    "core-js": "^2.4.0",
     "css-loader": "^0.25.0",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "img-loader": "^1.2.2",
     "imports-loader": "^0.6.5",
     "node-sass": "^3.7.0",
     "path": "^0.12.7",
+    "rxjs": "5.0.0-beta.12",
     "sass-loader": "^4.0.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
@@ -63,6 +65,7 @@
     "typings": "^1.3.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.16.1"
+    "webpack-dev-server": "^1.16.1",
+    "zone.js": "~0.6.12"
   }
 }
