--- a/package.json
+++ b/package.json
@@ -1,71 +1,71 @@
 {
-  "name": "personal_blog",
-  "version": "0.0.1",
-  "description": "Personal blog",
-  "main": "server/index.js",
-  "scripts": {
-    "start": "node ./server/index.js",
-    "build": "webpack",
-    "buildWatcher": "webpack --watch",
-    "webpack-dev": "webpack-dev-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/boykovdmitriy/personalBlog.git"
-  },
-  "keywords": [
-    "blog",
-    "node js",
-    "angular2"
-  ],
-  "author": {
-    "name": "Boykov D.A.",
-    "email": "boikovdmitriy@mail.ru"
-  },
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/boykovdmitriy/personalBlog/issues"
-  },
-  "homepage": "https://github.com/boykovdmitriy/personalBlog#readme",
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "jsonwebtoken": "^7.1.9",
-    "mongoose": "^4.6.0",
-    "morgan": "^1.7.0"
-  },
-  "devDependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@angular/upgrade": "2.0.0",
-    "clean-webpack-plugin": "^0.1.9",
-    "core-js": "^2.4.0",
-    "css-loader": "^0.25.0",
-    "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "img-loader": "^1.2.2",
-    "imports-loader": "^0.6.5",
-    "node-sass": "^3.10.0",
-    "path": "^0.12.7",
-    "raw-loader": "^0.5.1",
-    "rxjs": "5.0.0-beta.12",
-    "sass-loader": "^4.0.2",
-    "source-map-loader": "^0.1.5",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^0.8.2",
-    "tslint-loader": "^2.1.4",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.3",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.16.1",
-    "zone.js": "~0.6.12"
-  }
+	"name"           : "personal_blog",
+	"version"        : "0.0.1",
+	"description"    : "Personal blog",
+	"main"           : "server/index.js",
+	"scripts"        : {
+		"start"       : "node ./server/index.js",
+		"build"       : "webpack",
+		"buildWatcher": "webpack --watch",
+		"webpack-dev" : "webpack-dev-server"
+	},
+	"repository"     : {
+		"type": "git",
+		"url" : "git+https://github.com/boykovdmitriy/personalBlog.git"
+	},
+	"keywords"       : [
+		"blog",
+		"node js",
+		"angular2"
+	],
+	"author"         : {
+		"name" : "Boykov D.A.",
+		"email": "boikovdmitriy@mail.ru"
+	},
+	"license"        : "ISC",
+	"bugs"           : {
+		"url": "https://github.com/boykovdmitriy/personalBlog/issues"
+	},
+	"homepage"       : "https://github.com/boykovdmitriy/personalBlog#readme",
+	"dependencies"   : {
+		"body-parser" : "^1.15.2",
+		"express"     : "^4.14.0",
+		"jsonwebtoken": "^7.1.9",
+		"mongoose"    : "^4.7.0",
+		"morgan"      : "^1.7.0"
+	},
+	"devDependencies": {
+		"@angular/common"                  : "2.2.2",
+		"@angular/compiler"                : "2.2.2",
+		"@angular/core"                    : "2.2.2",
+		"@angular/forms"                   : "2.2.2",
+		"@angular/http"                    : "2.2.2",
+		"@angular/platform-browser"        : "2.2.2",
+		"@angular/platform-browser-dynamic": "2.2.2",
+		"@angular/router"                  : "3.2.2",
+		"@angular/upgrade"                 : "2.2.2",
+		"clean-webpack-plugin"             : "0.1.14",
+		"core-js"                          : "2.4.1",
+		"css-loader"                       : "0.26.0",
+		"exports-loader"                   : "0.6.3",
+		"extract-text-webpack-plugin"      : "1.0.1",
+		"file-loader"                      : "0.9.0",
+		"img-loader"                       : "1.3.1",
+		"imports-loader"                   : "0.6.5",
+		"node-sass"                        : "3.13.0",
+		"path"                             : "0.12.7",
+		"raw-loader"                       : "0.5.1",
+		"rxjs"                             : "5.0.0-rc.4",
+		"sass-loader"                      : "4.0.2",
+		"source-map-loader"                : "0.1.5",
+		"style-loader"                     : "0.13.1",
+		"ts-loader"                        : "1.2.2",
+		"tslint-loader"                    : "3.2.0",
+		"typescript"                       : "2.0.10",
+		"typings"                          : "2.0.0",
+		"url-loader"                       : "0.5.7",
+		"webpack"                          : "1.13.3",
+		"webpack-dev-server"               : "1.16.2",
+		"zone.js"                          : "~0.7.1"
+	}
 }
